--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,9 @@
 applications:
   - name: stratos
+    host: dashboard-beta
     memory: 1512M
     disk_quota: 1024M
     timeout: 180
     buildpack: https://github.com/cloudfoundry-incubator/stratos-buildpack#v2
     health-check-type: port
+    instances: 3
