--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,6 +1,5 @@
 ---
 jobs:
-
 - name: push-stratos-staging
   serial: true
   plan:
@@ -14,28 +13,29 @@ jobs:
       path: stratos-src/
       current_app_name: stratos
       manifest: stratos-config/manifest.yml
+      show_app_log: true
       environment_variables:
         SSO_LOGIN: "true"
         CF_CLIENT: stratos
-        CF_CLIENT_SECRET: {{stratos-client-secret-staging}}
+        CF_CLIENT_SECRET: ((stratos-client-secret-staging))
   on_failure:
     put: slack
     params:
       text: |
         :x: FAILED to deploy Stratos on staging
         <$ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME|View build details>
-      channel: {{slack-channel}}
-      username: {{slack-username}}
-      icon_url: {{slack-icon-url}}
+      channel: ((slack-channel))
+      username: ((slack-username))
+      icon_url: ((slack-icon-url))
   on_success:
     put: slack
     params:
       text: |
         :white_check_mark: Successfully deployed Stratos on staging
         <$ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME|View build details>
-      channel: {{slack-channel}}
-      username: {{slack-username}}
-      icon_url: {{slack-icon-url}}
+      channel: ((slack-channel))
+      username: ((slack-username))
+      icon_url: ((slack-icon-url))
 
 - name: push-stratos-production
   serial: true
@@ -52,28 +52,29 @@ jobs:
       path: stratos-src/
       current_app_name: stratos
       manifest: stratos-config/manifest.yml
+      show_app_log: true
       environment_variables:
         SSO_LOGIN: "true"
         CF_CLIENT: stratos
-        CF_CLIENT_SECRET: {{stratos-client-secret-production}}
+        CF_CLIENT_SECRET: ((stratos-client-secret-production))
   on_failure:
     put: slack
     params:
       text: |
         :x: FAILED to deploy Stratos on production
         <$ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME|View build details>
-      channel: {{slack-channel}}
-      username: {{slack-username}}
-      icon_url: {{slack-icon-url}}
+      channel: ((slack-channel))
+      username: ((slack-username))
+      icon_url: ((slack-icon-url))
   on_success:
     put: slack
     params:
       text: |
         :white_check_mark: Successfully deployed Stratos on production
         <$ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME|View build details>
-      channel: {{slack-channel}}
-      username: {{slack-username}}
-      icon_url: {{slack-icon-url}}
+      channel: ((slack-channel))
+      username: ((slack-username))
+      icon_url: ((slack-icon-url))
 
 resource_types:
 - name: slack-notification
@@ -97,24 +98,22 @@ resources:
 - name: deploy-stratos-staging
   type: cf
   source:
-    api: {{staging-cf-api-url}}
-    username: {{staging-cf-username}}
-    password: {{staging-cf-password}}
-    organization: {{staging-cf-organization}}
-    space: {{staging-cf-space}}
-    skip_cert_check: false
+    api: ((staging-cf-api-url))
+    username: ((staging-cf-username))
+    password: ((staging-cf-password))
+    organization: ((staging-cf-organization))
+    space: ((staging-cf-space))
 
 - name: deploy-stratos-production
   type: cf
   source:
-    api: {{production-cf-api-url}}
-    username: {{production-cf-username}}
-    password: {{production-cf-password}}
-    organization: {{production-cf-organization}}
-    space: {{production-cf-space}}
-    skip_cert_check: false
+    api: ((production-cf-api-url))
+    username: ((production-cf-username))
+    password: ((production-cf-password))
+    organization: ((production-cf-organization))
+    space: ((production-cf-space))
 
 - name: slack
   type: slack-notification
   source:
-    url: {{slack-webhook-url}}
+    url: ((slack-webhook-url))
