Make sure we map the route on production;
Not sure why, but it's not taking anymore so this was run manually. But
let's just run it after we successfully deploy to avoid having a
separate manifest file for production.

--- a/pipeline.yml
+++ b/pipeline.yml
@@ -57,6 +57,14 @@ jobs:
         SSO_LOGIN: "true"
         CF_CLIENT: stratos
         CF_CLIENT_SECRET: ((stratos-client-secret-production))
+  - task: map-routes-production
+    platform: linux
+    image_resource:
+      type: docker-image
+      source:
+        repository: 18fgsa/concourse-task
+    run: cf map-route stratos fr.cloud.gov -n dashboard-beta
+
   on_failure:
     put: slack
     params:
