--- a/ci/cf-map-routes.yml
+++ b/ci/cf-map-routes.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: 18fgsa/concourse-task
+    repository: 18fgsa/cloud-foundry-cli
 
 inputs:
 - name: stratos-config
