--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -14,6 +14,8 @@ jobs:
       current_app_name: stratos
       manifest: stratos-config/manifest.yml
       show_app_log: true
+      vars:
+        route: dashboard-beta.fr-stage.cloud.gov
       environment_variables:
         SSO_LOGIN: "true"
         CF_CLIENT: stratos
@@ -53,24 +55,12 @@ jobs:
       current_app_name: stratos
       manifest: stratos-config/manifest.yml
       show_app_log: true
+      vars:
+        route: dashboard-beta.fr.cloud.gov
       environment_variables:
         SSO_LOGIN: "true"
         CF_CLIENT: stratos
         CF_CLIENT_SECRET: ((stratos-client-secret-production))
-  # This is only necessary until we can use variable interpolation in
-  # the concourse cf-resource. It's needed here to avoid having multiple
-  # manifests for staging and production and because production uses a different
-  # default domain than staging.
-  # See: https://docs.cloudfoundry.org/devguide/deploy-apps/manifest.html#variable-substitution
-  # See: https://github.com/concourse/cf-resource/pull/56
-  - task: map-routes-production
-    file: stratos-config/ci/cf-map-routes.yml
-    params:
-      CF_API_URL: ((production-cf-api-url))
-      CF_USERNAME: ((production-cf-username))
-      CF_PASSWORD: ((production-cf-password))
-      CF_ORG: ((production-cf-organization))
-      CF_SPACE: ((production-cf-space))
   on_failure:
     put: slack
     params:
