Use resource property to overload the get name

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -67,8 +67,9 @@ jobs:
   serial: true
   plan:
   - aggregate:
-    - get: stratos-stable-src
+    - get: stratos-src
       trigger: true
+      resource: stratos-stable-src
     - get: stratos-config
       trigger: true
       passed: [push-stratos-staging]
