--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -15,6 +15,7 @@ jobs:
         type: docker-image
         source:
           repository: node
+          tag: 10
       inputs:
       - name: stratos-src
       - name: stratos-config
