parameterize redirect url

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -70,6 +70,7 @@ jobs:
       vars:
         external-route: dashboard-beta.fr-stage.cloud.gov
         app-route: dashboard-beta.apps.fr-stage.cloud.gov
+        redirect-url: dashboard.fr-stage.cloud.gov
   on_failure:
     put: slack
     params:
@@ -120,6 +121,7 @@ jobs:
       vars:
         external-route: dashboard-beta.fr.cloud.gov
         app-route: dashboard-beta.app.cloud.gov
+        redirect-url: dashboard.fr.cloud.gov
 
   # This is only necessary until we can use variable interpolation in
   # the concourse cf-resource. It's needed here to avoid having multiple
