--- a/redirects/manifest.yml
+++ b/redirects/manifest.yml
@@ -9,3 +9,5 @@ applications:
   - route: ((external-route))
   - route: ((app-route))
   stack: cflinuxfs3
+  env:
+    REDIRECT_URL: ((redirect-url))
