--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -7,7 +7,7 @@ http {
     server {
         listen {{port}};
 
-        rewrite ^/(.*)$ https://dashboard.fr.cloud.gov/$1 redirect;
+        rewrite ^/(.*)$ https://{{env "REDIRECT_URL"}}/$1 redirect;
     }
 }
 
