--- a/redirects/manifest.yml
+++ b/redirects/manifest.yml
@@ -2,9 +2,9 @@ applications:
 - name: dashboard-beta-redirects
   buildpacks:
   - nginx_buildpack
-  disk_quota: 1G
-  instances: 1
-  memory: 64M
+  disk_quota: 32M
+  instances: 2
+  memory: 32M
   routes:
   - route: ((external-route))
   - route: ((app-route))
