--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,33 +1,65 @@
 ---
 jobs:
-- name: push-stratos-dev
+- name: new-major-upstream
+  serial: true
+  plan:
+    - get: next-upstream
+      trigger: true
+      params:
+        globs: do-not-download-assets
+    - put: slack
+      params:
+        text: |
+          :exclamation: A new _major_ version of stratos is available!  Update the pipeline.yml to start deploying it.
+        channel: ((production-slack-channel))
+        username: ((slack-username))
+        icon_url: ((slack-icon-url))
+
+- name: compile-assets
   serial: true
   plan:
   - in_parallel:
-    - get: stratos-src
+    - get: upstream
       trigger: true
-    - get: stratos-config
+      params:
+        include_source_tarball: true
+    - get: config
       trigger: true
-  - task: prebuild-npm
-    file: stratos-config/ci/prebuild-npm.yml
+  - task: precompile
+    file: config/ci/precompile.yml
+  - put: precompiled
+    params:
+      file: precompiled/stratos.tgz
+
+- name: deploy-dev
+  serial: true
+  plan:
+  - get: precompiled
+    passed: [compile-assets]
+    trigger: true
+    params:
+      unpack: true
   - put: cf-dev
     params:
-      path: stratos-prebuilt/
+      path: precompiled/
       current_app_name: stratos
-      manifest: stratos-config/manifest.yml
+      manifest: precompiled/manifest.yml
       show_app_log: true
+      vars:
+        route: ((dev-cf-route))
       environment_variables:
         SSO_LOGIN: "true"
         SSO_OPTIONS: "nosplash,logout"
         CF_CLIENT: stratos
-        CF_CLIENT_SECRET: ((stratos-client-secret-dev))
+        CF_CLIENT_SECRET: ((dev-cf-client-secret))
+        SESSION_STORE_SECRET: ((dev-session-store-secret))
   on_failure:
     put: slack
     params:
       text: |
         :x: FAILED to deploy Stratos on dev
         <$ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME|View build details>
-      channel: ((slack-channel))
+      channel: ((dev-slack-channel))
       username: ((slack-username))
       icon_url: ((slack-icon-url))
   on_success:
@@ -36,36 +68,41 @@ jobs:
       text: |
         :white_check_mark: Successfully deployed Stratos on dev
         <$ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME|View build details>
-      channel: ((slack-channel))
+      channel: ((dev-slack-channel))
       username: ((slack-username))
       icon_url: ((slack-icon-url))
-- name: push-stratos-staging
+
+- name: deploy-staging
   serial: true
   plan:
   - in_parallel:
-    - get: stratos-src
+    - get: precompiled
+      passed: [deploy-dev]
       trigger: true
-      passed: [push-stratos-dev]
-    - get: stratos-config
-      trigger: true
-      passed: [push-stratos-dev]
-  - task: prebuild-npm
-    file: stratos-config/ci/prebuild-npm.yml
+      params:
+        unpack: true
+    - get: config
+      trigger: false
   - put: cf-staging
     params:
-      path: stratos-prebuilt/
+      path: precompiled/
       current_app_name: stratos
-      manifest: stratos-config/manifest.yml
+      manifest: precompiled/manifest.yml
       show_app_log: true
+      vars:
+        route: ((staging-cf-route))
       environment_variables:
         SSO_LOGIN: "true"
         SSO_OPTIONS: "nosplash,logout"
         CF_CLIENT: stratos
-        CF_CLIENT_SECRET: ((stratos-client-secret-staging))
+        CF_CLIENT_SECRET: ((staging-cf-client-secret))
+        SESSION_STORE_SECRET: ((staging-session-store-secret))
   - put: cf-staging
+    # This can eventually be removed, once we're sure nobody is linking to
+    # dashboard-beta.
     params:
-      path: stratos-config/redirects
-      manifest: stratos-config/redirects/manifest.yml
+      path: config/redirects
+      manifest: config/redirects/manifest.yml
       current_app_name: dashboard-beta-redirects
       vars:
         external-route: dashboard-beta.fr-stage.cloud.gov
@@ -77,7 +114,7 @@ jobs:
       text: |
         :x: FAILED to deploy Stratos on staging
         <$ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME|View build details>
-      channel: ((slack-channel))
+      channel: ((staging-slack-channel))
       username: ((slack-username))
       icon_url: ((slack-icon-url))
   on_success:
@@ -86,64 +123,53 @@ jobs:
       text: |
         :white_check_mark: Successfully deployed Stratos on staging
         <$ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME|View build details>
-      channel: ((slack-channel))
+      channel: ((staging-slack-channel))
       username: ((slack-username))
       icon_url: ((slack-icon-url))
 
-- name: push-stratos-production
+- name: deploy-production
   serial: true
   plan:
   - in_parallel:
-    - get: stratos-src
+    - get: precompiled
+      passed: [deploy-staging]
       trigger: true
-      passed: [push-stratos-staging]
-    - get: stratos-config
-      trigger: true
-      passed: [push-stratos-staging]
-  - task: prebuild-npm
-    file: stratos-config/ci/prebuild-npm.yml
+      params:
+        unpack: true
+    - get: config
+      trigger: false
   - put: cf-production
     params:
-      path: stratos-prebuilt/
+      path: precompiled/
       current_app_name: stratos
-      manifest: stratos-config/manifest.yml
+      manifest: precompiled/manifest.yml
       show_app_log: true
+      vars:
+        route: ((production-cf-route))
       environment_variables:
         SSO_LOGIN: "true"
         SSO_OPTIONS: "nosplash,logout"
         CF_CLIENT: stratos
-        CF_CLIENT_SECRET: ((stratos-client-secret-production))
+        CF_CLIENT_SECRET: ((production-cf-client-secret))
+        SESSION_STORE_SECRET: ((production-session-store-secret))
   - put: cf-production
+    # This can eventually be removed, once we're sure nobody is linking to
+    # dashboard-beta.
     params:
-      path: stratos-config/redirects
-      manifest: stratos-config/redirects/manifest.yml
+      path: config/redirects
+      manifest: config/redirects/manifest.yml
       current_app_name: dashboard-beta-redirects
       vars:
         external-route: dashboard-beta.fr.cloud.gov
         app-route: dashboard-beta.app.cloud.gov
         redirect-url: dashboard.fr.cloud.gov
-
-  # This is only necessary until we can use variable interpolation in
-  # the concourse cf-resource. It's needed here to avoid having multiple
-  # manifests for staging and production and because production uses a different
-  # default domain than staging.
-  # See: https://docs.cloudfoundry.org/devguide/deploy-apps/manifest.html#variable-substitution
-  # See: https://github.com/concourse/cf-resource/pull/56
-  - task: map-routes-production
-    file: stratos-config/ci/cf-map-routes.yml
-    params:
-      CF_API_URL: ((production-cf-api-url))
-      CF_USERNAME: ((production-cf-username))
-      CF_PASSWORD: ((production-cf-password))
-      CF_ORG: ((production-cf-organization))
-      CF_SPACE: ((production-cf-space))
   on_failure:
     put: slack
     params:
       text: |
         :x: FAILED to deploy Stratos on production
         <$ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME|View build details>
-      channel: ((slack-channel))
+      channel: ((production-slack-channel))
       username: ((slack-username))
       icon_url: ((slack-icon-url))
   on_success:
@@ -152,7 +178,7 @@ jobs:
       text: |
         :white_check_mark: Successfully deployed Stratos on production
         <$ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME|View build details>
-      channel: ((slack-channel))
+      channel: ((production-slack-channel))
       username: ((slack-username))
       icon_url: ((slack-icon-url))
 
@@ -162,20 +188,35 @@ resource_types:
   source:
     repository: cfcommunity/slack-notification-resource
 
-resources:
-- name: stratos-src
-  type: git
+- name: s3-iam
+  type: docker-image
   source:
-    uri: https://github.com/cloudfoundry/stratos.git
-    branch: master
-    # tag_filter: stable
-    # branch: v2-master
+    repository: 18fgsa/s3-resource
 
-- name: stratos-config
+resources:
+- name: upstream
+  type: github-release
+  source:
+    owner: cloudfoundry
+    repository: stratos
+    access_token: ((github-access-token))
+    # If you change this, change the one below as well.
+    tag_filter: '^(3\..*)'
+
+- name: next-upstream
+  type: github-release
+  source:
+    owner: cloudfoundry
+    repository: stratos
+    access_token: ((github-access-token))
+    # If you change this, change the one above as well.
+    tag_filter: '^(4\..*)'
+
+- name: config
   type: git
   source:
     uri: https://github.com/18F/cg-deploy-stratos.git
-    branch: master
+    branch: tsaleh/track-upstream-releases
 
 - name: cf-dev
   type: cf
@@ -203,6 +244,14 @@ resources:
     password: ((production-cf-password))
     organization: ((production-cf-organization))
     space: ((production-cf-space))
+
+- name: precompiled
+  type: s3-iam
+  source:
+    bucket: cg-build-artifacts
+    versioned_file: deploy-stratos/stratos.tgz
+    region_name: us-gov-west-1
+    server_side_encryption: AES256
 
 - name: slack
   type: slack-notification
