--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,13 @@
 applications:
   - name: stratos
-    host: dashboard
+    routes:
+      - route: ((route))
     memory: 1512M
     disk_quota: 1024M
     timeout: 180
+    buildpacks:
     # Buildpack pin should match upstream manifest:
     # https://github.com/cloudfoundry/stratos/blob/stable/manifest.yml
-    buildpack: https://github.com/cloudfoundry/stratos-buildpack#v2.4
+    - "https://github.com/cloudfoundry/stratos-buildpack#v3"
     health-check-type: port
     instances: 3
