--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -111,6 +111,7 @@ jobs:
       environment_variables:
         SSO_LOGIN: "true"
         SSO_OPTIONS: "nosplash,logout"
+        SSO_WHITELIST: "https://dashboard.fr-stage.cloud.gov"
         CF_CLIENT: stratos
         CF_CLIENT_SECRET: ((staging-cf-client-secret))
         SESSION_STORE_SECRET: ((staging-session-store-secret))
@@ -170,6 +171,7 @@ jobs:
       environment_variables:
         SSO_LOGIN: "true"
         SSO_OPTIONS: "nosplash,logout"
+        SSO_WHITELIST: "https://dashboard.fr.cloud.gov"
         CF_CLIENT: stratos
         CF_CLIENT_SECRET: ((production-cf-client-secret))
         SESSION_STORE_SECRET: ((production-session-store-secret))
