Add deprecated route for legacy dashboard
This PR adds redirects so the deprecated-dashboard route redirects users to the new, Stratos dashboard.

--- a/redirects/manifest.yml
+++ b/redirects/manifest.yml
@@ -8,6 +8,7 @@ applications:
   routes:
   - route: ((external-route))
   - route: ((app-route))
+  - route: ((deprecated-route))
   stack: cflinuxfs3
   env:
     REDIRECT_URL: ((redirect-url))
