--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -126,6 +126,7 @@ jobs:
       vars:
         external-route: dashboard-beta.fr-stage.cloud.gov
         app-route: dashboard-beta.apps.fr-stage.cloud.gov
+        deprecated-route: dashboard-deprecated.fr-stage.cloud.gov
         redirect-url: dashboard.fr-stage.cloud.gov
   on_failure:
     put: slack
@@ -186,6 +187,7 @@ jobs:
       vars:
         external-route: dashboard-beta.fr.cloud.gov
         app-route: dashboard-beta.app.cloud.gov
+        deprecated-route: dashboard-deprecated.fr.cloud.gov
         redirect-url: dashboard.fr.cloud.gov
   on_failure:
     put: slack
