the dummy globs param should be an array

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -6,7 +6,7 @@ jobs:
     - get: next-stratos-release
       trigger: true
       params:
-        globs: do-not-download-assets
+        globs: [do-not-download-assets]
     - put: slack
       params:
         text: |
