--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -54,7 +54,7 @@ jobs:
           cp ../config/stratos.yaml .
           npm config set cache $(pwd)/../.npm --global
           npm install
-          npm run build
+          npm run prebuild-ui
           cp ../config/manifest.yml .
 
           tar -czf ../precompiled/stratos.tgz \
