--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -266,7 +266,7 @@ resources:
   icon: github-circle
   source:
     uri: https://github.com/cloud-gov/stratos
-    tag_filter: '4.1.0'
+    branch: rg-stratos
 
 - name: next-stratos-release
   type: github-release
