--- a/manifest.yml
+++ b/manifest.yml
@@ -7,8 +7,7 @@ applications:
     timeout: 180
     buildpacks:
     # Buildpack pin should match upstream manifest:
-    # https://github.com/cloudfoundry/stratos/blob/stable/manifest.yml
-    - "https://github.com/cloudfoundry/stratos-buildpack#v4.0"
+    - go_buildpack
     health-check-type: port
     instances: 3
     services:
