Setting GOPACKAGENAME for the Go Buildpack

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -283,7 +283,7 @@ resources:
   icon: github-circle
   source:
     uri: ((github-uri))
-    branch: ((github-branch))
+    branch: rg-deploy-stratos
 
 - name: cf-dev
   type: cf
