changes to manifest to try to get Go updated to 1.18.1

--- a/manifest.yml
+++ b/manifest.yml
@@ -13,4 +13,4 @@ applications:
     services:
     - stratos-db
     env: 
-      GOPACKAGENAME: src/jetstream/jetstream
+      GOPACKAGENAME: jetstream
