--- a/manifest.yml
+++ b/manifest.yml
@@ -13,4 +13,5 @@ applications:
     services:
     - stratos-db
     env: 
-      GOPACKAGENAME: jetstream
+      GOPACKAGENAME: rg-stratos
+      GO_INSTALL_PACKAGE_SPEC: src/jetstream
