This time with just GOPACKAGENAME set to stratos

--- a/manifest.yml
+++ b/manifest.yml
@@ -13,5 +13,4 @@ applications:
     services:
     - stratos-db
     env: 
-      GOPACKAGENAME: rg-stratos
-      GO_INSTALL_PACKAGE_SPEC: src/jetstream
+      GOPACKAGENAME: stratos
