GO_INSTALL_PACKAGE_SPEC set based on root dir precompiled and GOVERSION set to 1.18.1

--- a/manifest.yml
+++ b/manifest.yml
@@ -13,4 +13,5 @@ applications:
     services:
     - stratos-db
     env: 
-      GOPACKAGENAME: stratos
+      GO_INSTALL_PACKAGE_SPEC: precompiled/src/jetstream
+      GOVERSION: go1.18.1
