GOPACKAGENAME set to stratos in addition to the other env vars

--- a/manifest.yml
+++ b/manifest.yml
@@ -15,3 +15,4 @@ applications:
     env: 
       GO_INSTALL_PACKAGE_SPEC: precompiled/src/jetstream
       GOVERSION: go1.18
+      GOPACKAGENAME: stratos
