--- a/manifest.yml
+++ b/manifest.yml
@@ -14,4 +14,5 @@ applications:
     - stratos-db
     env:
       GOPACKAGENAME: stratos
-
+      GO_INSTALL_PACKAGE_SPEC: src/jetstream
+    command: compile
