--- a/manifest.yml
+++ b/manifest.yml
@@ -14,6 +14,6 @@ applications:
     - stratos-db
     env:
       GO_VERSION: "1.18.1"
-      GO_MD5: "aaaa70f2fb5a7803"
+      GO_SHA256: "aaaa70f2fb5a7803"
       NODE_VERSION: "15.15"
 
