--- a/manifest.yml
+++ b/manifest.yml
@@ -13,3 +13,5 @@ applications:
     services:
     - stratos-db
     command:  ./deploy/cloud-foundry/build.sh && ./deploy/cloud-foundry/start.sh
+    env:
+      GOPACKAGENAME: stratos
