--- a/manifest.yml
+++ b/manifest.yml
@@ -14,4 +14,4 @@ applications:
     - stratos-db
     command:  ./deploy/cloud-foundry/build.sh && ./deploy/cloud-foundry/start.sh
     env:
-      GOPACKAGENAME: stratos
+      GOPACKAGENAME: jetstream
