Fixed another typo

--- a/manifest.yml
+++ b/manifest.yml
@@ -13,6 +13,6 @@ applications:
     services:
     - stratos-db
     command:  
-      - ./deploy/cloud-foundry/build.sh && ./deploy/cloud-foundry/start.sh
+      ./deploy/cloud-foundry/build.sh && ./deploy/cloud-foundry/start.sh
     env:
       GOPACKAGENAME: stratos
