--- a/manifest.yml
+++ b/manifest.yml
@@ -14,4 +14,4 @@ applications:
       ./deploy/cloud-foundry/build.sh && ./deploy/cloud-foundry/start.sh
     env:
       GOPACKAGENAME: stratos
-      GO_INSTALL_PACKAGE_SPEC: .
+      GO_INSTALL_PACKAGE_SPEC: stratos/src/jetstream
