--- a/manifest.yml
+++ b/manifest.yml
@@ -6,13 +6,13 @@ applications:
     disk_quota: 512M
     timeout: 180
     buildpacks:
-    # Buildpack pin should match upstream manifest:
-    - https://github.com/cloud-gov/stratos-buildpack#rg-stratos-buildpack
+    - go_buildpack
     health-check-type: port
     instances: 3
     services:
     - stratos-db
     env:
-      GO_VERSION: "1.18.1"
-      GO_SHA256: "aaaa70f2fb5a7803"
-      NODE_VERSION: "15.15"
+      GO_VERSION: "1.18"
+      GO_INSTALL_PACKAGE_SPEC: github.com/cloud-gov/stratos/tree/apb/rollback-stratos/src/jetstream
+      GOPACKAGENAME: jetstream
+    command: ls
