--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -71,9 +71,7 @@ jobs:
   - get: precompiled
     passed: [compile-assets]
     trigger: true
-    params:
-      unpack: true
-  - task: build
+  - task: build-stratos
     config:
       platform: linux
       image_resource:
@@ -82,7 +80,7 @@ jobs:
           repository: go
           tag: 1.18-stretch
       inputs:
-      - name: precompiled
+        - name: precompiled
       outputs:
       - name: compiled
       run:
@@ -90,9 +88,7 @@ jobs:
         args:
         - -exc
         - |
-          cd precompiled
-
-          ./deploy/cloud-foundry/build.sh
+          ls
 
   - put: compiled
     params:
